@@ -32,7 +32,7 @@ docker build -t java-container:openjdk-8-jre-alpine-mem -f openjdk-8-jre-alpine-
 
 ## Running with memory constraints
 
-To explain the `--memory-test` configuration in more detail, when we run with this configuration, the inital memory, maximum memory and allocatable memory available to the java process will be printed out. In this mode, the container is set to [only allocate up to 75% of the initial free memory](../src/main/java/com/ibm/code/java/App.java#L47) and will continually eat up 1MB of memory until it reaches the the allocatable memory limit. 
+To explain the `--memory-test` configuration in more detail, when we run with this configuration, the inital memory, maximum memory and allocatable memory available to the java process will be printed out. In this mode, the container is set to [only allocate up to 75% of the initial free memory](../src/main/java/com/ibm/code/java/App.java#L47) and will continually eat up 1MB of memory until it reaches the the allocatable memory limit. At this point, the program will print out the free memory within the container (there should always be some as we only use 75% of the free memory available when starting the process).
 
 In Docker, it is possible to [set the maximum memory](https://docs.docker.com/engine/reference/run/#user-memory-constraints) that a container can use with the flag `-m` or `--memory`.
 
@@ -62,10 +62,51 @@ We can actually see that the container was `OOMKilled`. As detailed in the [Dock
 
 This happens because process isolation is based on cgroups while tools in Linux which get information about the available resources on a machine like `free` and `top` and are based on the `/proc` filesystem were implemented way before cgroups. As a result, they are therefore not _cgroups-aware_. The JVM suffers from the exact same issue when you specify memory constraints and it instead sees the all the available memory on the host. 
 
-The only way to get around this is to actually tell the JVM exactly how much memory it can use with the `-Xmx` variable which by default will [constrain the JVM heap](https://stackoverflow.com/questions/4667483/how-is-the-default-java-heap-size-determined). Let's set it to the same value as our memory limit:
+The only way to get around this is to actually tell the JVM exactly how much memory it can use with the `-Xmx` variable which by default will [constrain the JVM heap](https://stackoverflow.com/questions/4667483/how-is-the-default-java-heap-size-determined). 
+
+Let's remove the dead container:
 
 ```
-docker run -it -p 8080:8080 -e JVM_ARGS="-Xmx256M" --memory=256MB --name=memory-test java-container:openjdk-8-jre-alpine-mem
+docker rm memory-test
 ```
+
+Now, let's run the container again but this time set the `-Xmx` JVM argument to the same value as our Docker memory limit:
+
+```
+docker run -it -p 8080:8080 -e JVM_OPTS="-Xmx256M" --memory=256MB --name=memory-test java-container:openjdk-8-jre-alpine-mem
+```
+
+Now we actually see that the JVM respects the limits and our application can actually complete so we see the free memory available. We can now end the process with the keys `CTRL + C` and remove the container:
+
+```
+docker rm memory-test
+```
+
+This is annoying though because we have to define the memory limits in 2 places. It would be great if the JVM could just pick up the Docker limits...
+
+## Java SE support for Docker CPU and memory limits
+
+Since [Java 9](https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits) there is now native support for CPU and memory limits. The changes were also backported to Java 8 and they are available to use as experimental features. 
+
+Let's see how we can make use of these new arguments:
+
+```
+docker run -it -p 8080:8080 -e JVM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:MaxRAMFraction=1" --memory=256MB --name=memory-test java-container:openjdk-8-jre-alpine-mem
+```
+
+Again, we can see that our resource constaints are respected but let's take a look at what arguments we are passing through:
+* `-XX:+UnlockExperimentalVMOptions` - Tells the JVM to use the backported features
+* `-XX:+UseCGroupMemoryLimitForHeap` - Tells the JVM to use the Docker memory limit
+* `-XX:MaxRAMFraction=1` - Tells the JVM to use all of the available memory as the max heap size
+
+Let's clean up after ourselves:
+
+```
+docker rm memory-test
+```
+
+Before this change in Java, it was very impractical to run Docker within a container. Imagine not having mutiple containers all on one host thinking they have access to all the host's resources! If they did actually use a lot of memory, you would enter a world of pain as your containers would all fight for memory and to survive. 
+
+Regardless, I hope I have showed you some of the considerations and thought that goes into running Java applciations within containers.
 
 Congratulations, you have completed the workshop! Feel free to go [back to the menu](../README.md) to revist any of the labs.
